--- a/labs/lab08/presentation/net-os-admin--lab08--presentation.qmd
+++ b/labs/lab08/presentation/net-os-admin--lab08--presentation.qmd
@@ -1,200 +1,125 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
-license: CC BY
+title: "Лабораторная работа №8"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Настройка SMTP-сервера"
+license: "CC BY"
 date: today
-date-format: "YYYY-MM-DD" # Example: 2025-09-06
+date-format: "YYYY-MM-DD"
 ---
 
-# Информация
+# Цели и задачи
 
-## Докладчик
+**Цель:** Приобретение практических навыков по установке и конфигурированию SMTP-сервера
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
+**Задачи:**
+- Установка и настройка Postfix
+- Конфигурация доменной почты
+- Тестирование отправки почты
+- Автоматизация развёртывания
 
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
+# Установка Postfix
 
-:::
-::: {.column width="30%"}
+**Установка пакетов:**
+- Postfix как SMTP-сервер
+- s-mail как почтовый клиент
+- Настройка firewall для SMTP
 
-![](./image/kulyabov.jpg)
+![Установка пакетов Postfix](image/1.png){width=70%}
 
-:::
-::::::::::::::
+# Настройка безопасности
 
-# Вводная часть
+**Конфигурация доступа:**
+- Открытие порта 25 в firewall
+- Восстановление контекстов SELinux
+- Активация службы Postfix
 
-## Актуальность
+![Настройка firewall для SMTP](image/2.png){width=70%}
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+# Базовая настройка Postfix
 
-## Объект и предмет исследования
+**Утилита postconf:**
+- Просмотр текущих настроек
+- Настройка параметров домена
+- Отключение IPv6
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+![Просмотр настроек Postfix](image/4.png){width=70%}
 
-## Цели и задачи
+# Настройка доменных параметров
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+**Ключевые параметры:**
+- myorigin = $mydomain
+- mydomain = user.net
+- inet_protocols = ipv4
 
-## Материалы и методы
+![Настройка параметров домена](image/5.png){width=70%}
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+# Тестирование почтовой системы
 
-# Создание презентации
+**Отправка с сервера:**
+- Использование утилиты mail
+- Мониторинг логов maillog
+- Проверка доставки сообщений
 
-## Процессор `pandoc`
+![Отправка почты с сервера](image/8.png){width=70%}
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+# Настройка клиента
 
-## Формат `pdf`
+**Установка на client:**
+- Пакеты Postfix и s-mail
+- Аналогичная настройка IPv4
+- Запуск почтовой службы
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+![Установка Postfix на клиенте](image/9.png){width=70%}
 
-## Код для формата `pdf`
+# Сетевая конфигурация
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+**Расширение доступа:**
+- inet_interfaces = all
+- mynetworks = 127.0.0.0/8, 192.168.0.0/16
+- Разрешение пересылки между узлами
 
-## Формат `html`
+![Настройка сетевых интерфейсов](image/11.png){width=70%}
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+# DNS конфигурация
 
-## Код для формата `html`
+**MX-записи:**
+- Добавление MX-записи для mail.user.net
+- Обновление прямой и обратной зон
+- Настройка почтового сервера домена
 
-- Тема задаётся в файле `Makefile`
+![Настройка DNS записей](image/12.png){width=70%}
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+# Доменная почта
 
-## Получающиеся форматы
+**Настройка доставки:**
+- Добавление домена в mydestination
+- Перезапуск DNS и Postfix
+- Восстановление SELinux
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+![Настройка mydestination](image/13.png){width=70%}
 
-# Элементы презентации
+# Автоматизация развёртывания
 
-## Актуальность
+**Vagrant скрипты:**
+- Скрипты для server и client
+- Автоматическая настройка Postfix
+- Интеграция с конфигурацией Vagrant
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+![Создание скриптов автоматизации](image/16.png){width=70%}
 
-## Цели и задачи
+# Контрольные вопросы
 
-- Не формулируйте более 1--2 целей исследования
+**Основные команды:**
+- Конфигурация: /etc/postfix/main.cf
+- Проверка: postfix check
+- Очередь: postqueue -p
+- Отправка: postqueue -f
 
-## Материалы и методы
+# Выводы
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
-
-## Содержание исследования
-
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
-
-## Результаты
-
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
-
-
-## Итоговый слайд
-
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
-
-# Рекомендую
-
-## Принцип 10/20/30
-
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
-
-## Связь слайдов
-
-::: incremental
-
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
-
-:::
-
-## Количество сущностей
-
-::: incremental
-
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
-
-:::
-
-## Общие рекомендации
-
-::: incremental
-
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
-
-:::
-
-## Представление данных
-
-::: incremental
-
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
-
-:::
+**Результаты работы:**
+- Успешно настроен SMTP-сервер Postfix
+- Реализована доменная почта с MX-записями
+- Обеспечена отправка почты с server и client
+- Автоматизирован процесс развёртывания
+- Получены навыки администрирования почтовых систем
