--- a/labs/lab08/report/net-os-admin--lab08--report.qmd
+++ b/labs/lab08/report/net-os-admin--lab08--report.qmd
@@ -1,67 +1,155 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-
-## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа №8"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Настройка SMTP-сервера"
 license: "CC BY"
 ---
 
 # Цель работы
 
-Здесь приводится формулировка цели лабораторной работы.
-Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.
-Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Приобретение практических навыков по установке и конфигурированию SMTP-сервера на примере Postfix.
 
 # Задание
 
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
-
-# Теоретическое введение
-
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+1. Установить на виртуальной машине server SMTP-сервер Postfix.
+2. Выполнить первоначальную настройку Postfix с помощью утилиты postconf.
+3. Проверить отправку почты с сервера и клиента.
+4. Сконфигурировать Postfix для работы в домене.
+5. Написать скрипт для Vagrant, фиксирующий действия по установке и настройке Postfix.
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## Установка Postfix
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+### Установка пакетов
+
+На виртуальной машине server выполнена установка необходимых пакетов для работы почтового сервера. Установлены Postfix как SMTP-сервер и s-mail как консольный почтовый клиент.
+
+![Установка пакетов Postfix](image/1.png)
+
+### Настройка firewall
+
+Выполнена конфигурация межсетевого экрана, разрешающая работу службы протокола SMTP. Добавлено постоянное правило для порта 25.
+
+![Настройка firewall для SMTP](image/2.png)
+
+### Запуск службы
+
+Запущена и активирована служба Postfix. Проведено восстановление контекстов безопасности SELinux для корректной работы почтовой системы.
+
+![Запуск службы Postfix](image/3.png)
+
+## Изменение параметров Postfix с помощью postconf
+
+### Просмотр текущих настроек
+
+С помощью утилиты postconf выполнен просмотр текущих настроек Postfix. Изучены значения параметров myorigin и mydomain.
+
+![Просмотр настроек Postfix](image/4.png)
+
+### Настройка параметров домена
+
+Выполнена замена значения параметра myorigin на значение параметра mydomain. Это обеспечивает отправку писем не на локальный хост, а на сервер в домене.
+
+![Настройка параметров домена](image/5.png)
+
+### Отключение IPv6
+
+Отключена поддержка IPv6 в работе Postfix, оставлен только протокол IPv4 для упрощения конфигурации и тестирования.
+
+![Отключение IPv6](image/6.png)
+
+### Проверка конфигурации
+
+Проведена проверка корректности содержания конфигурационного файла main.cf и выполнена перезагрузка конфигурационных файлов Postfix.
+
+![Проверка конфигурации](image/7.png)
+
+## Проверка работы Postfix
+
+### Отправка почты с сервера
+
+На сервере под учётной записью пользователя отправлено тестовое письмо с использованием утилиты mail. Проведен мониторинг работы почтовой службы через логи.
+
+![Отправка почты с сервера](image/8.png)
+
+### Установка Postfix на клиенте
+
+На виртуальной машине client установлены необходимые пакеты Postfix и s-mail. Выполнена аналогичная настройка отключения IPv6.
+
+![Установка Postfix на клиенте](image/9.png)
+
+### Отправка почты с клиента
+
+С клиентской машины отправлено тестовое письмо. Проведено сравнение результатов мониторинга почтовой службы при отправке сообщений с сервера и с клиента.
+
+![Отправка почты с клиента](image/10.png)
+
+### Настройка сетевых интерфейсов
+
+Разрешено Postfix прослушивать соединения не только с локального узла, но и с других интерфейсов сети. Добавлен адрес внутренней сети для разрешения пересылки сообщений между узлами.
+
+![Настройка сетевых интерфейсов](image/11.png)
+
+## Конфигурация Postfix для домена
+
+### Настройка DNS записей
+
+В файлы прямой и обратной DNS-зон добавлены MX-записи с указанием имени почтового сервера mail.user.net. Это обеспечивает возможность отправки сообщений на доменные адреса.
+
+![Настройка DNS записей](image/12.png)
+
+### Добавление домена в mydestination
+
+В конфигурации Postfix добавлен домен в список элементов сети, для которых данный сервер является конечной точкой доставки почты.
+
+![Настройка mydestination](image/13.png)
+
+### Перезапуск служб
+
+Выполнен перезапуск DNS-сервера и перезагрузка конфигурации Postfix. Восстановлены контексты безопасности SELinux.
+
+![Перезапуск служб](image/14.png)
+
+### Проверка отправки на доменный адрес
+
+Проведена проверка отправки почты с клиента на доменный адрес. Убедились в корректной доставке сообщений.
+
+## Внесение изменений в настройки внутреннего окружения
+
+### Создание скриптов автоматизации
+
+Разработаны shell-скрипты для автоматической установки и настройки Postfix на сервере и клиенте. Скрипты интегрированы в конфигурацию Vagrant.
+
+![Создание скриптов автоматизации](image/16.png)
+
+### Копирование конфигурационных файлов
+
+Выполнено копирование конфигурационных файлов DNS-сервера в соответствующие каталоги провижининга для сохранения настроек.
+
+![Копирование конфигурационных файлов](image/17.png)
+
+# Контрольные вопросы
+
+1. **В каком каталоге и в каком файле следует смотреть конфигурацию Postfix?**  
+   Конфигурация Postfix находится в каталоге /etc/postfix, основной файл конфигурации — main.cf.
+
+2. **Каким образом можно проверить корректность синтаксиса в конфигурационном файле Postfix?**  
+   Для проверки корректности синтаксиса используется команда `postfix check`.
+
+3. **В каких параметрах конфигурации Postfix требуется внести изменения для настройки отправки писем на доменные адреса?**  
+   Требуется изменить параметры: mydomain, myorigin, mydestination, inet_interfaces, mynetworks.
+
+4. **Приведите примеры работы с утилитой mail.**  
+   - Отправка письма: `echo "Текст" | mail -s "Тема" user@domain.net`
+   - Просмотр писем: `mail`
+   - Удаление письма: в режиме просмотра командой `d`
+
+5. **Приведите примеры работы с утилитой postqueue.**  
+   - Просмотр очереди: `postqueue -p`
+   - Отправка всех сообщений: `postqueue -f`
+   - Определение числа сообщений: `postqueue -p | grep -c "^[A-F0-9]"`
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
-
-# Список литературы{.unnumbered}
-
-::: {#refs}
-:::
+В ходе лабораторной работы были успешно установлены и настроены компоненты почтовой системы на основе SMTP-сервера Postfix. Освоены методы конфигурации Postfix с использованием утилиты postconf, настроена работа с доменными адресами через DNS MX-записи. Реализована возможность отправки почты как с сервера, так и с клиентской машины. Автоматизирован процесс развёртывания почтовой системы с помощью Vagrant скриптов. Полученные навыки позволяют администрировать корпоративные почтовые системы и обеспечивать надежную доставку электронной почты.
