--- a/labs/lab09/presentation/net-os-admin--lab09--presentation.qmd
+++ b/labs/lab09/presentation/net-os-admin--lab09--presentation.qmd
@@ -1,200 +1,210 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
-license: CC BY
+title: "Лабораторная работа №9"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Настройка POP3/IMAP сервера"
+license: "CC BY"
 date: today
-date-format: "YYYY-MM-DD" # Example: 2025-09-06
+date-format: "YYYY-MM-DD"
 ---
 
-# Информация
+# Цели и задачи
 
-## Докладчик
+**Цель:** Приобретение практических навыков по установке и конфигурированию POP3/IMAP-сервера
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
+**Задачи:**
+- Установка и настройка Dovecot
+- Интеграция с Postfix
+- Настройка почтового клиента Evolution
+- Тестирование работы почтовой системы
+- Автоматизация развертывания
 
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
+# Архитектура почтовой системы
 
-:::
-::: {.column width="30%"}
+**Компоненты системы:**
+- Dovecot - POP3/IMAP сервер
+- Postfix - SMTP сервер  
+- Evolution - почтовый клиент
+- Telnet - инструмент тестирования
 
-![](./image/kulyabov.jpg)
+![Схема работы почтовой системы](image/1.png){width=70%}
 
-:::
-::::::::::::::
+# Установка компонентов
 
-# Вводная часть
+**Установленные пакеты:**
+- Dovecot - почтовый сервер
+- Telnet - для тестирования
+- Evolution - почтовый клиент
 
-## Актуальность
+**Ключевые действия:**
+- Установка через менеджер пакетов
+- Настройка зависимостей
+- Проверка установки
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+![Установка пакетов Dovecot и Telnet](image/1.png){width=70%}
 
-## Объект и предмет исследования
+# Настройка Dovecot
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+**Основные конфигурации:**
+- Активация протоколов IMAP/POP3
+- Настройка аутентификации
+- Интеграция с системой PAM
+- Формат почтовых ящиков Maildir
 
-## Цели и задачи
+**Файлы конфигурации:**
+- /etc/dovecot/dovecot.conf
+- /etc/dovecot/conf.d/10-auth.conf
+- /etc/dovecot/conf.d/10-mail.conf
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+![Настройка протоколов Dovecot](image/2.png){width=70%}
 
-## Материалы и методы
+# Настройка аутентификации
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+**Механизмы аутентификации:**
+- Метод plain для совместимости
+- Интеграция с PAM
+- Драйверы passwd и pam
+- Настройка безопасности
 
-# Создание презентации
+**Конфигурационные файлы:**
+- 10-auth.conf - методы аутентификации
+- auth-system.conf.ext - системная аутентификация
+- 10-mail.conf - параметры почтовых ящиков
 
-## Процессор `pandoc`
+![Настройка аутентификации](image/3.png){width=70%}
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+# Интеграция с Postfix
 
-## Формат `pdf`
+**Настройки интеграции:**
+- Согласование формата почтовых ящиков
+- Настройка каталога доставки Maildir
+- Синхронизация параметров аутентификации
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+**Выполненные команды:**
+- Настройка home_mailbox
+- Перезапуск служб
+- Проверка совместной работы
 
-## Код для формата `pdf`
+![Настройка Postfix](image/6.png){width=70%}
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+# Настройка безопасности
 
-## Формат `html`
+**Конфигурация firewall:**
+- Открытие портов POP3 (110)
+- Открытие портов POP3S (995)
+- Открытие портов IMAP (143)
+- Открытие портов IMAPS (993)
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+**Безопасность:**
+- Настройка SELinux
+- Восстановление контекстов
+- Проверка правил доступа
 
-## Код для формата `html`
+![Настройка межсетевого экрана](image/7.png){width=70%}
 
-- Тема задаётся в файле `Makefile`
+# Запуск и тестирование
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+**Запуск служб:**
+- Активация Dovecot
+- Перезапуск Postfix
+- Настройка автозапуска
 
-## Получающиеся форматы
+**Тестирование:**
+- Проверка статуса служб
+- Мониторинг логов
+- Диагностика ошибок
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+![Запуск почтовых служб](image/8.png){width=70%}
 
-# Элементы презентации
+# Настройка почтового клиента
 
-## Актуальность
+**Evolution настройка:**
+- Учетная запись пользователя
+- Сервер входящей почты (IMAP)
+- Сервер исходящей почты (SMTP)
+- Параметры аутентификации
 
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
+**Параметры подключения:**
+- Адрес сервера: mail.user.net
+- Порт IMAP: 143
+- Порт SMTP: 25
+- Метод аутентификации: STARTTLS
 
-## Цели и задачи
+![Установка Evolution](image/12.png){width=70%}
 
-- Не формулируйте более 1--2 целей исследования
+# Тестирование работы
 
-## Материалы и методы
+**Функциональное тестирование:**
+- Отправка тестовых писем
+- Проверка доставки
+- Управление почтовыми ящиками
+- Работа с вложениями
 
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
+**Инструменты тестирования:**
+- Графический клиент Evolution
+- Консольная утилита mail
+- Административные утилиты doveadm
 
-## Содержание исследования
+![Настройка учетной записи](image/13.png){width=70%}
 
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
+# Тестирование через Telnet
 
-## Результаты
+**Проверка POP3 протокола:**
+- Подключение к серверу
+- Аутентификация пользователя
+- Просмотр списка сообщений
+- Чтение и удаление писем
 
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
+**Основные команды:**
+- USER - аутентификация
+- PASS - ввод пароля
+- LIST - список сообщений
+- RETR - чтение письма
+- DELE - удаление письма
 
+![Тестирование POP3 соединения](image/15.png){width=70%}
 
-## Итоговый слайд
+# Автоматизация развертывания
 
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
+**Vagrant скрипты:**
+- Автоматическая установка пакетов
+- Настройка конфигурационных файлов
+- Конфигурация firewall
+- Запуск и настройка служб
 
-# Рекомендую
+**Преимущества автоматизации:**
+- Воспроизводимость настроек
+- Быстрое развертывание
+- Минимизация ошибок
+- Документирование процесса
 
-## Принцип 10/20/30
+![Создание скриптов автоматизации](image/16.png){width=70%}
 
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
+# Контрольные вопросы
 
-## Связь слайдов
+**Основные вопросы:**
+- SMTP: отправка почты между серверами
+- IMAP: управление почтой на сервере
+- POP3: загрузка почты на клиент
+- Dovecot: POP3/IMAP сервер доступа
+- Postfix: SMTP сервер пересылки
 
-::: incremental
+**Технические детали:**
+- Форматы почтовых ящиков: mbox vs Maildir
+- Методы аутентификации: PLAIN, LOGIN
+- Порты: 110(POP3), 143(IMAP), 993(IMAPS)
 
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
+# Выводы
 
-:::
+**Результаты работы:**
+- Успешно настроен полнофункциональный почтовый сервер
+- Отработаны навыки работы с Dovecot и Postfix
+- Реализована интеграция различных компонентов
+- Настроен безопасный доступ к почтовым ящикам
+- Автоматизирован процесс развертывания системы
 
-## Количество сущностей
-
-::: incremental
-
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
-
-:::
-
-## Общие рекомендации
-
-::: incremental
-
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
-
-:::
-
-## Представление данных
-
-::: incremental
-
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
-
-:::
+**Приобретенные компетенции:**
+- Администрирование почтовых серверов
+- Настройка сетевых служб
+- Интеграция системных компонентов
+- Автоматизация развертывания
+- Диагностика и тестирование
