--- a/labs/lab09/report/net-os-admin--lab09--report.qmd
+++ b/labs/lab09/report/net-os-admin--lab09--report.qmd
@@ -1,67 +1,173 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-
-## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа №9"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Настройка POP3/IMAP сервера"
 license: "CC BY"
 ---
 
 # Цель работы
 
-Здесь приводится формулировка цели лабораторной работы.
-Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.
-Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Приобретение практических навыков по установке и простейшему конфигурированию POP3/IMAP-сервера на примере **Dovecot**.
 
 # Задание
 
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
-
-# Теоретическое введение
-
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+1. Установить на виртуальной машине **server** **Dovecot** и **Telnet** для проверки работы почтового сервера
+2. Настроить **Dovecot** для работы по протоколам **POP3** и **IMAP**
+3. Установить на виртуальной машине **client** почтовый клиент **Evolution** и настроить его для работы с почтовым сервером
+4. Проверить корректность работы почтового сервера с обеих виртуальных машин
+5. Внести изменения в скрипты **Vagrant** для автоматизации настройки
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## Установка компонентов почтовой системы
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+### Установка Dovecot и Telnet
+
+Выполнена установка необходимых пакетов для работы **POP3/IMAP сервера** на виртуальной машине **server**. Установлены **Dovecot** в качестве почтового сервера и **Telnet** для тестирования сетевых соединений.
+
+![Установка пакетов Dovecot и Telnet](image/1.png)
+
+## Настройка Dovecot
+
+### Конфигурация почтовых протоколов
+
+В основных настройках **Dovecot** указаны разрешенные протоколы работы почтового сервера. Активирована поддержка как **IMAP**, так и **POP3** протоколов для обеспечения гибкости доступа к почтовым ящикам.
+
+![Настройка почтовых протоколов](image/2.png)
+
+### Настройка механизмов аутентификации
+
+В конфигурационных файлах **Dovecot** настроены методы аутентификации пользователей. Выбран механизм **plain** для обеспечения совместимости с различными почтовыми клиентами.
+
+![Настройка аутентификации](image/3.png)
+
+### Интеграция с системой аутентификации
+
+Настроена интеграция **Dovecot** с системой **PAM** для использования существующих учетных записей пользователей операционной системы. Конфигурированы драйверы для работы с системными пользователями и их паролями.
+
+![Интеграция с системой аутентификации](image/4.png)
+
+### Настройка формата почтовых ящиков
+
+Определен формат хранения почтовых сообщений. Выбран формат **Maildir**, который обеспечивает лучшую производительность и надежность при работе с большими объемами почты по сравнению с традиционным **mbox**.
+
+![Настройка формата почтовых ящиков](image/5.png)
+
+### Настройка Postfix для работы с Dovecot
+
+Выполнена интеграция **Postfix** с **Dovecot** путем настройки параметров доставки почты. Указан каталог для хранения почтовых ящиков в формате **Maildir**.
+
+![Настройка Postfix](image/6.png)
+
+### Конфигурация межсетевого экрана
+
+Настроены правила **firewall** для разрешения работы почтовых служб. Открыты порты для **POP3**, **POP3S**, **IMAP** и **IMAPS** протоколов, обеспечивающие безопасный и незащищенный доступ к почтовому серверу.
+
+![Настройка межсетевого экрана](image/7.png)
+
+### Запуск и активация служб
+
+Выполнен перезапуск **Postfix** и первичный запуск **Dovecot**. Службы настроены для автоматического запуска при загрузке системы. Проведено восстановление контекстов безопасности **SELinux**.
+
+![Запуск почтовых служб](image/8.png)
+
+## Тестирование работы Dovecot
+
+### Мониторинг системных логов
+
+Запущен мониторинг системных логов почтовой службы для отслеживания работы сервера и диагностики возможных проблем. Настроен вывод логов в реальном времени.
+
+![Мониторинг системных логов](image/9.png)
+
+### Проверка почтовых ящиков через командную строку
+
+Выполнена проверка работы почтовых ящиков с использованием консольного почтового клиента. Протестирована возможность просмотра и управления почтой через командную строку.
+
+![Проверка почтовых ящиков](image/10.png)
+
+### Администрирование почтовых ящиков
+
+Использованы административные утилиты **Dovecot** для просмотра структуры почтовых ящиков пользователей. Проверена корректность создания и организации почтовых папок.
+
+![Администрирование почтовых ящиков](image/11.png)
+
+## Настройка почтового клиента
+
+### Установка Evolution на клиенте
+
+На виртуальной машине **client** установлен графический почтовый клиент **Evolution**, предоставляющий полнофункциональный интерфейс для работы с электронной почтой.
+
+![Установка Evolution](image/12.png)
+
+### Конфигурация учетной записи почты
+
+Выполнена настройка учетной записи электронной почты в клиенте **Evolution**. Указаны параметры подключения к серверу, включая адреса **IMAP** и **SMTP** серверов, номера портов и методы аутентификации.
+
+![Настройка учетной записи](image/13.png)
+
+### Тестирование отправки и получения почты
+
+Проведено тестирование полного цикла работы с электронной почтой: отправка тестовых сообщений, их доставка и получение. Проверена корректность работы всех компонентов почтовой системы.
+
+![Тестирование работы почты](image/14.png)
+
+## Проверка работы через Telnet
+
+### Тестирование POP3 соединения
+
+Выполнено тестирование работы **POP3** сервера с использованием утилиты **Telnet**. Проверены основные команды протокола: аутентификация, просмотр списка сообщений, чтение и удаление писем.
+
+![Тестирование POP3 соединения](image/15.png)
+
+## Автоматизация развертывания
+
+### Создание скриптов provisioning
+
+Разработаны скрипты автоматической настройки для **Vagrant**, обеспечивающие воспроизводимость конфигурации почтовой системы. Скрипты включают установку пакетов, настройку служб и конфигурацию межсетевого экрана.
+
+![Создание скриптов автоматизации](image/16.png)
+
+# Контрольные вопросы
+
+1. **За что отвечает протокол SMTP?**  
+   **SMTP** отвечает за отправку и пересылку электронной почты между почтовыми серверами.
+
+2. **За что отвечает протокол IMAP?**  
+   **IMAP** обеспечивает доступ к электронной почте на сервере с возможностью управления папками и синхронизации состояния между различными клиентами.
+
+3. **За что отвечает протокол POP3?**  
+   **POP3** используется для загрузки почтовых сообщений с сервера на локальный компьютер, обычно с удалением писем с сервера после загрузки.
+
+4. **В чём назначение Dovecot?**  
+   **Dovecot** представляет собой высокопроизводительный **POP3/IMAP** сервер, обеспечивающий безопасный доступ пользователей к их почтовым ящикам.
+
+5. **В каких файлах обычно находятся настройки работы Dovecot?**  
+   Основные настройки находятся в `/etc/dovecot/dovecot.conf`, а дополнительные конфигурации распределены по файлам в каталоге `/etc/dovecot/conf.d/`
+
+6. **В чём назначение Postfix?**  
+   **Postfix** является **MTA** и отвечает за прием, маршрутизацию и доставку электронной почты между серверами.
+
+7. **Какие методы аутентификации пользователей можно использовать в Dovecot?**  
+   Поддерживаются методы **PLAIN**, **LOGIN**, **CRAM-MD5** и другие. **PLAIN** передает учетные данные в открытом виде, но может использоваться в сочетании с **SSL/TLS**.
+
+8. **Приведите пример заголовка письма с пояснениями его полей.**  
+   From: sender@domain.net (адрес отправителя)
+To: recipient@domain.net (адрес получателя)
+Subject: Тема сообщения (краткое описание содержания)
+Date: Пн, 1 Янв 2024 12:00:00 +0300 (время отправки)
+
+
+9. **Приведите примеры использования команд для работы с почтовыми протоколами через telnet.**  
+Подключение к **POP3** серверу, аутентификация пользователя, просмотр списка сообщений и управление почтовым ящиком через текстовые команды протокола.
+
+10. **Приведите примеры с пояснениями по работе с doveadm.**  
+ Команда `doveadm mailbox list -u user` отображает список почтовых ящиков пользователя, а `doveadm search -u user ALL` выполняет поиск сообщений по заданным критериям.
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
-
-# Список литературы{.unnumbered}
-
-::: {#refs}
-:::
+- Освоены практические навыки установки и настройки **POP3/IMAP** сервера на основе **Dovecot**
+- Настроена интеграция между **Postfix** и **Dovecot** для создания полнофункциональной почтовой системы
+- Реализована возможность доступа к почте через различные клиенты: графический (**Evolution**) и консольный (**Telnet**)
+- Отработаны методы тестирования и диагностики работы почтовых служб
+- Автоматизирован процесс развертывания почтовой системы с использованием **Vagrant** скриптов
+- Получены компетенции, необходимые для администрирования корпоративных почтовых систем
