--- a/labs/lab12/report/net-os-admin--lab12--report.qmd
+++ b/labs/lab12/report/net-os-admin--lab12--report.qmd
@@ -1,67 +1,122 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-
-## Title
-title: "Шаблон отчёта по лабораторной работе"
-subtitle: "Простейший вариант"
+title: "Лабораторная работа №12"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Синхронизация времени"
 license: "CC BY"
 ---
 
 # Цель работы
-
-Здесь приводится формулировка цели лабораторной работы.
-Формулировки цели для каждой лабораторной работы приведены в методических указаниях.
-
-Цель данного шаблона --- максимально упростить подготовку отчётов по лабораторным работам.
-Модифицируя данный шаблон, студенты смогут без труда подготовить отчёт по лабораторным работам, а также познакомиться с основными возможностями разметки Markdown.
+Получение практических навыков по управлению системным временем и настройке синхронизации времени в Unix/Linux системах с использованием протокола NTP и службы chrony.
 
 # Задание
-
-Здесь приводится описание задания в соответствии с рекомендациями методического пособия и выданным вариантом.
-
-# Теоретическое введение
-
-Здесь описываются теоретические аспекты, связанные с выполнением работы.
-
-Например, в [табл. @tbl-std-dir] приведено краткое описание стандартных каталогов Unix.
-
-| Имя каталога | Описание каталога                                                                                                          |
-|--------------|----------------------------------------------------------------------------------------------------------------------------|
-| `/`          | Корневая директория, содержащая всю файловую                                                                               |
-| `/bin `      | Основные системные утилиты, необходимые как в однопользовательском режиме, так и при обычной работе всем пользователям     |
-| `/etc`       | Общесистемные конфигурационные файлы и файлы конфигурации установленных программ                                           |
-| `/home`      | Содержит домашние директории пользователей, которые, в свою очередь, содержат персональные настройки и данные пользователя |
-| `/media`     | Точки монтирования для сменных носителей                                                                                   |
-| `/root`      | Домашняя директория пользователя  `root`                                                                                   |
-| `/tmp`       | Временные файлы                                                                                                            |
-| `/usr`       | Вторичная иерархия для данных пользователя                                                                                 |
-
-: Описание некоторых каталогов файловой системы GNU Linux {#tbl-std-dir}
-
-Более подробно про Unix см. в [@tanenbaum_book_modern-os_ru; @robbins_book_bash_en; @zarrelli_book_mastering-bash_en; @newham_book_learning-bash_en].
+1. Изучить команды управления системным и аппаратным временем
+2. Настроить сервер в качестве сервера синхронизации времени для локальной сети
+3. Разработать скрипты автоматизации для развертывания NTP-сервера и клиента
 
 # Выполнение лабораторной работы
 
-Описываются проведённые действия, в качестве иллюстрации даётся ссылка на иллюстрацию ([рис. @fig-001]).
+## Настройка базовых параметров времени
 
-![V Сольвеевский конгресс (1927) «Электроны и фотоны»](image/solvay.jpg){#fig-001 width=70%}
+### Анализ текущих временных параметров
+Выполнена проверка текущих настроек даты и времени на серверной и клиентской машинах. Получена информация о текущем часовом поясе, статусе сетевой синхронизации и состоянии системных часов.
+
+![Проверка параметров времени на сервере](image/1.png)
+
+### Работа с системным и аппаратным временем
+Проведен анализ текущего системного времени и аппаратных часов. Выполнено сравнение показаний системного и аппаратного времени на обеих машинах.
+
+![Сравнение системного и аппаратного времени](image/2.png)
+
+## Настройка службы синхронизации времени
+
+### Установка программного обеспечения
+На серверной машине выполнена установка пакета chrony для организации службы синхронизации времени. Процесс установки включал загрузку необходимых компонентов.
+
+![Установка chrony на сервере](image/3.png)
+
+### Проверка начального состояния синхронизации
+Проведена проверка текущих источников времени на сервере и клиенте перед настройкой. Проанализированы доступные NTP-серверы и их статусы.
+
+![Источники времени до настройки](image/4.png)
+
+### Конфигурация сервера времени
+Выполнена настройка файла конфигурации chrony с добавлением правил доступа для клиентов локальной сети. Определен диапазон IP-адресов для доступа к серверу времени.
+
+![Редактирование конфигурации сервера](image/5.png)
+
+### Настройка сетевой безопасности
+Произведена конфигурация межсетевого экрана для разрешения NTP-трафика. Добавлено постоянное правило для службы синхронизации времени.
+
+![Настройка firewall для NTP](image/6.png)
+
+### Перезапуск службы синхронизации
+Выполнен перезапуск службы chronyd для применения новых параметров конфигурации. Проверена корректность запуска службы.
+
+![Статус службы chronyd на сервере](image/7.png)
+
+## Настройка клиентских машин
+
+### Конфигурация клиента времени
+На клиентской машине выполнена настройка файла конфигурации chrony с указанием сервера синхронизации. Добавлен локальный сервер с параметрами ускоренной синхронизации.
+
+![Конфигурационный файл клиента](image/8.png)
+
+### Проверка источников синхронизации
+Выполнена проверка доступных источников времени на клиентской машине после настройки. Проанализированы параметры подключения к серверу.
+
+![Источники времени после настройки](image/9.png)
+
+### Мониторинг состояния синхронизации
+Проведен детальный анализ параметров синхронизации времени. Получена статистика работы службы синхронизации и точности временных показаний.
+
+![Детальная информация о синхронизации](image/10.png)
+
+## Автоматизация развертывания
+
+### Создание скриптов provisioning
+Разработаны исполняемые скрипты для автоматической настройки сервера и клиента. Скрипты включают установку пакетов и настройку служб.
+
+![Скрипты автоматизации](image/11.png)
+
+### Интеграция с Vagrant
+Настроены секции provisioning в конфигурационном файле Vagrant для автоматического выполнения скриптов при развертывании виртуальных машин.
+
+![Конфигурация Vagrantfile](image/12.png)
+
+# Контрольные вопросы
+
+1. **Почему важна точная синхронизация времени для служб баз данных?**  
+   Точная синхронизация времени критически важна для обеспечения согласованности транзакций в распределенных системах баз данных, корректной работы механизмов репликации и поддержания целостности временных меток.
+
+2. **Почему служба проверки подлинности Kerberos сильно зависит от правильной синхронизации времени?**  
+   Kerberos использует временные метки для предотвращения атак повторного использования билетов. Расхождение во времени более 5 минут между клиентом и сервером приводит к отказу в аутентификации.
+
+3. **Какая служба используется по умолчанию для синхронизации времени на RHEL 7?**  
+   В RHEL 7 по умолчанию используется служба chrony, которая заменила ранее применявшуюся ntpd.
+
+4. **Какова страта по умолчанию для локальных часов?**  
+   Страта по умолчанию для локальных часов составляет 10, что указывает на низкий приоритет при отсутствии внешних источников синхронизации.
+
+5. **Какой порт брандмауэра должен быть открыт, если вы настраиваете свой сервер как одноранговый узел NTP?**  
+   Для работы NTP-сервера должен быть открыт UDP-порт 123, через который осуществляется обмен пакетами синхронизации времени.
+
+6. **Какую строку вам нужно включить в конфигурационный файл chrony, если вы хотите быть сервером времени, даже если внешние серверы NTP недоступны?**  
+   Необходимо добавить директиву `local stratum 10`, которая позволяет серверу работать как локальный источник времени с указанной стратой.
+
+7. **Какую страту имеет хост, если нет текущей синхронизации времени NTP?**  
+   При отсутствии синхронизации хост имеет страту 16, что означает несинхронизированное состояние и непригодность для использования в качестве источника времени.
+
+8. **Какую команду вы бы использовали на сервере с chrony, чтобы узнать, с какими серверами он синхронизируется?**  
+   Для просмотра списка серверов синхронизации используется команда `chronyc sources`, которая отображает текущие источники времени и их статус.
+
+9. **Как вы можете получить подробную статистику текущих настроек времени для процесса chrony вашего сервера?**  
+   Подробная статистика получается с помощью команды `chronyc tracking`, которая показывает текущие параметры синхронизации, включая смещение, частоту и страту.
 
 # Выводы
 
-Здесь кратко описываются итоги проделанной работы.
-
-# Список литературы{.unnumbered}
-
-::: {#refs}
-:::
+- Освоены практические навыки управления системным и аппаратным временем в Unix/Linux системах
+- Получен опыт настройки службы chrony для организации сервера синхронизации времени
+- Разработаны автоматизированные скрипты для развертывания NTP-инфраструктуры
+- Изучены методы мониторинга и диагностики работы службы синхронизации времени
+- Приобретены знания по настройке сетевой безопасности для NTP-сервиса
+- Освоена интеграция скриптов автоматизации с системой виртуализации Vagrant
