--- a/labs/lab12/presentation/net-os-admin--lab12--presentation.qmd
+++ b/labs/lab12/presentation/net-os-admin--lab12--presentation.qmd
@@ -1,200 +1,107 @@
 ---
-## Author
-author:
-  name: Дмитрий Сергеевич Кулябов
-  degrees: DSc
-  orcid: 0000-0002-0877-7063
-  email: kulyabov-ds@rudn.ru
-  affiliation:
-    - name: Российский университет дружбы народов
-      country: Российская Федерация
-      postal-code: 117198
-      city: Москва
-      address: ул. Миклухо-Маклая, д. 6
-## Title
-title: Структура научной презентации
-subtitle: Простейший вариант
-license: CC BY
+title: "Лабораторная работа №12"
+author: "Газизянов Владислав Альбертович"
+subtitle: "Синхронизация времени"
+license: "CC BY"
 date: today
-date-format: "YYYY-MM-DD" # Example: 2025-09-06
+date-format: "YYYY-MM-DD"
 ---
 
-# Информация
+# Цели и задачи
 
-## Докладчик
+**Цель:** Получение навыков управления системным временем и настройки синхронизации в Unix/Linux системах
 
-:::::::::::::: {.columns align=center}
-::: {.column width="70%"}
+**Задачи:**
+- Изучить команды управления временем
+- Настроить NTP-сервер для локальной сети  
+- Разработать скрипты автоматизации развертывания
 
-  * Кулябов Дмитрий Сергеевич
-  * д.ф.-м.н., профессор
-  * профессор кафедры теории вероятностей и кибербезопасности
-  * Российский университет дружбы народов им. П. Лумумбы
-  * [kulyabov-ds@rudn.ru](mailto:kulyabov-ds@rudn.ru)
-  * <https://yamadharma.github.io/ru/>
+# Настройка базовых параметров времени
 
-:::
-::: {.column width="30%"}
+**Проверка временных параметров:**
+- Анализ часового пояса и синхронизации
+- Сравнение системного и аппаратного времени
+- Диагностика состояния системных часов
 
-![](./image/kulyabov.jpg)
+![Параметры времени на сервере](image/1.png){width=70%}
 
-:::
-::::::::::::::
+# Установка и настройка chrony
 
-# Вводная часть
+**Развертывание службы синхронизации:**
+- Установка пакета chrony на сервере
+- Настройка конфигурационных файлов
+- Открытие доступа для локальной сети
 
-## Актуальность
+![Установка chrony на сервере](image/3.png){width=70%}
 
-- Важно донести результаты своих исследований до окружающих
-- Научная презентация --- рабочий инструмент исследователя
-- Необходимо создавать презентацию быстро
-- Желательна минимизация усилий для создания презентации
+# Конфигурация сервера времени
 
-## Объект и предмет исследования
+**Настройка серверной части:**
+- Редактирование /etc/chrony.conf
+- Добавление правил доступа
+- Настройка межсетевого экрана
 
-- Презентация как текст
-- Программное обеспечение для создания презентаций
-- Входные и выходные форматы презентаций
+![Конфигурационный файл сервера](image/5.png){width=70%}
 
-## Цели и задачи
+# Настройка сетевой безопасности
 
-- Создать шаблон презентации в Markdown
-- Описать алгоритм создания выходных форматов презентаций
+**Обеспечение безопасности:**
+- Открытие UDP-порта 123
+- Настройка правил firewall
+- Проверка доступности службы
 
-## Материалы и методы
+![Настройка firewall для NTP](image/6.png){width=70%}
 
-- Процессор `pandoc` для входного формата Markdown
-- Результирующие форматы
-	- `pdf`
-	- `html`
-- Автоматизация процесса создания: `Makefile`
+# Настройка клиентских машин
 
-# Создание презентации
+**Конфигурация клиента:**
+- Указание локального сервера синхронизации
+- Удаление стандартных источников
+- Настройка ускоренной синхронизации
 
-## Процессор `pandoc`
+![Конфигурация клиента](image/8.png){width=70%}
 
-- Pandoc: преобразователь текстовых файлов
-- Сайт: <https://pandoc.org/>
-- Репозиторий: <https://github.com/jgm/pandoc>
+# Проверка синхронизации
 
-## Формат `pdf`
+**Мониторинг работы службы:**
+- Анализ источников времени
+- Проверка статуса синхронизации
+- Оценка точности показаний
 
-- Использование LaTeX
-- Пакет для презентации: [beamer](https://ctan.org/pkg/beamer)
-- Тема оформления: `metropolis`
+![Источники времени после настройки](image/9.png){width=70%}
 
-## Код для формата `pdf`
+# Детальный мониторинг
 
-```yaml
-slide_level: 2
-aspectratio: 169
-section-titles: true
-theme: metropolis
-```
+**Анализ параметров синхронизации:**
+- Отслеживание смещения времени
+- Мониторинг задержки и страты
+- Статистика работы службы
 
-## Формат `html`
+![Детальная информация о синхронизации](image/10.png){width=70%}
 
-- Используется фреймворк [reveal.js](https://revealjs.com/)
-- Используется [тема](https://revealjs.com/themes/) `beige`
+# Автоматизация развертывания
 
-## Код для формата `html`
+**Создание скриптов provisioning:**
+- Разработка скриптов для сервера и клиента
+- Настройка автоматической установки
+- Интеграция с Vagrant
 
-- Тема задаётся в файле `Makefile`
+![Скрипты автоматизации](image/11.png){width=70%}
 
-```make
-REVEALJS_THEME = beige
-```
-# Результаты
+# Контрольные вопросы
 
-## Получающиеся форматы
+**Основные вопросы:**
+- Базы данных: согласованность транзакций и репликации
+- Kerberos: защита от атак повторного использования
+- RHEL 7: служба chrony по умолчанию
+- Страта локальных часов: значение 10
+- Брандмауэр: UDP-порт 123
 
-- Полученный `pdf`-файл можно демонстрировать в любой программе просмотра `pdf`
-- Полученный `html`-файл содержит в себе все ресурсы: изображения, css, скрипты
+# Выводы
 
-# Элементы презентации
-
-## Актуальность
-
-- Даёт понять, о чём пойдёт речь
-- Следует широко и кратко описать проблему
-- Мотивировать свое исследование
-- Сформулировать цели и задачи
-- Возможна формулировка ожидаемых результатов
-
-## Цели и задачи
-
-- Не формулируйте более 1--2 целей исследования
-
-## Материалы и методы
-
-- Представляйте данные качественно
-- Количественно, только если крайне необходимо
-- Излишние детали не нужны
-
-## Содержание исследования
-
-- Предлагаемое решение задач исследования с обоснованием
-- Основные этапы работы
-
-## Результаты
-
-- Не нужны все результаты
-- Необходимы логические связки между слайдами
-- Необходимо показать понимание материала
-
-
-## Итоговый слайд
-
-- Запоминается последняя фраза. © Штирлиц
-- Главное сообщение, которое вы хотите донести до слушателей
-- Избегайте использовать последний слайд вида *Спасибо за внимание*
-
-# Рекомендую
-
-## Принцип 10/20/30
-
-  - 10 слайдов
-  - 20 минут на доклад
-  - 30 кегль шрифта
-
-## Связь слайдов
-
-::: incremental
-
-- Один слайд --- одна мысль
-- Нельзя ссылаться на объекты, находящиеся на предыдущих слайдах (например, на формулы)
-- Каждый слайд должен иметь заголовок
-
-:::
-
-## Количество сущностей
-
-::: incremental
-
-- Человек может одновременно помнить $7 \pm 2$ элемента
-- При размещении информации на слайде старайтесь чтобы в сумме слайд содержал не более 5 элементов
-- Можно группировать элементы так, чтобы визуально было не более 5 групп
-
-:::
-
-## Общие рекомендации
-
-::: incremental
-
-- На слайд выносится та информация, которая без зрительной опоры воспринимается хуже
-- Слайды должны дополнять или обобщать содержание выступления или его частей, а не дублировать его
-- Информация на слайдах должна быть изложена кратко, чётко и хорошо структурирована
-- Слайд не должен быть перегружен графическими изображениями и текстом
-- Не злоупотребляйте анимацией и переходами
-
-:::
-
-## Представление данных
-
-::: incremental
-
-- Лучше представить в виде схемы
-- Менее оптимально представить в виде рисунка, графика, таблицы
-- Текст используется, если все предыдущие способы отображения информации не подошли
-
-:::
+**Результаты работы:**
+- Освоено управление системным и аппаратным временем
+- Настроен сервер синхронизации для локальной сети
+- Разработаны скрипты автоматизации развертывания
+- Изучены методы мониторинга работы NTP-службы
+- Приобретены навыки настройки сетевой безопасности
